# info2602-fastapi-l3

./: README.md  pyproject.toml
app/: cli.py  database.py  main.py  models.py
